--- a/custom_components/bensinpriser/manifest.json
+++ b/custom_components/bensinpriser/manifest.json
@@ -1,12 +1,10 @@
 {
   "domain": "bensinpriser",
-  "name": "Bensinpriser",
-  "version": "1.0",
-  "documentation": "https://github.com/henrikhjelmse/bensinpriser/",
-  "issue_tracker": "https://github.com/henrikhjelmse/bensinpriser/issues",
-  "dependencies": [],
+  "name": "bensinpriser",
   "codeowners": ["@henrikhjelmse"],
   "requirements": [],
-  "config_flow": true,
-  "icon": "custom_components/bensinpriser/fuel.png"
+  "issue_tracker": "https://github.com/henrikhjelmse/bensinpriser/issues",
+  "documentation": "https://github.com/henrikhjelmse/bensinpriser/blob/master/info.md",
+  "version": "v1.0.0",
+  "iot_class": "cloud_polling"
 }
