--- a/custom_components/bensinpriser/manifest.json
+++ b/custom_components/bensinpriser/manifest.json
@@ -1,5 +1,5 @@
 {
-  "domain": "bensinpriser",
+  "domain": "sensor",
   "name": "bensinpriser",
   "codeowners": ["@henrikhjelmse"],
   "requirements": [],
