--- a/custom_components/bensinpriser/manifest.json
+++ b/custom_components/bensinpriser/manifest.json
@@ -1,5 +1,5 @@
 {
-  "domain": "bensinpriser",
+  "domain": "sensor",
   "documentation": "https://github.com/henrikhjelmse/bensinpriser/",
   "issue_tracker": "https://github.com/henrikhjelmse/bensinpriser/issues",
   "codeowners": ["henrikhjelmse"],
